revise original webpage

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="row centered">
 				<div class="col-lg-12">
 					<h1>Jin ZENG</h1>
-					<h3>PhD Candidate, HKUST</h3>
+					<h3>Sensetime Research, Hong Kong</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -74,14 +74,14 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I am pursuing my Ph.D. degree from Dept. of Electronic &amp; 
+					<p>I am a researcher in Sensetime Research, Hong Kong. Prior to joining Sensetime, I got my Ph.D. degree from Dept. of Electronic &amp; 
 					Computer Engineering, The Hong Kong University of Science 
-					and Technology since Sep. 2012, under the jointly 
+					and Technology in Jan., 2018, under the jointly 
 					supervision of Prof. Khaled B. Letaief and Prof. Gene 
 					Cheung.</p>
 				</div>
 				<div class="col-lg-3">
-					<p><a href="https://ihome.ust.hk/~jzengab/assets/CV_Zeng Jin.pdf"><i class="icon-file"></i></a>Download Resume.pdf</p>
+					<p><a href="https://ihome.ust.hk/~jzengab/assets/CV_Zeng Jin.pdf"><i class="icon-file"></i></a>Links in this site to be updated</p>
 				</div>
 				
 			</div><!--/.row -->
@@ -99,7 +99,7 @@
 				</div>
 				<div class="col-lg-8">
 					<p><t>Image/Video/3D signal processing</t><br/>
-					3D point cloud denoising, subpixel-based image rendering/evaluation, image/video coding, hyperspectral image coding</p>
+					DNN-based image restoration, DNN-based scene understanding, 3D point cloud denoising, subpixel-based image rendering/evaluation, image/video coding, hyperspectral image coding</p>
 				</div>
 	
 				<div class="col-lg-8 col-lg-offset-3">
@@ -120,7 +120,7 @@
 					<h5>EDUCATION</h5>
 				</div>
 				<div class="col-lg-8">
-					<p><t>2012.9 - Present, PhD candidate, Department of Electronic and Computer Engineering, HKUST</t><br/>
+					<p><t>2012.9 - 2018.1, Ph.D., Department of Electronic and Computer Engineering, HKUST</t><br/>
 					Advisors: <a href="https://www.ece.ust.hk/~eekhaled/">Prof. Khaled B. LETAIEF</a> and <a href="http://research.nii.ac.jp/~cheung/">Prof. Gene CHEUNG</a></p>
 				</div>
 	
@@ -177,7 +177,7 @@
 				</div>
 				<div class="col-lg-8">
 					<p>Jin Zeng, Gene Cheung, Antonio Orgeta, "Bipartition Approximation for Graph Wavelet Signal Decomposition", 
-					accepted by IEEE Trans. Signal Processing. 
+					IEEE Trans. Signal Processing, 2017, 65(20): 5466-5480. 
 					</p>
 				</div>
 				
@@ -217,7 +217,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="javascript" height="130" width="130"></canvas>
-						<p>Matlab</p>
+						<p>Matlab, Python</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -240,11 +240,11 @@
 						<script>
 							var doughnutData = [
 									{
-										value: 70,
+										value: 80,
 										color:"#1abc9c"
 									},
 									{
-										value : 30,
+										value : 20,
 										color : "#ecf0f1"
 									}
 								];
@@ -340,19 +340,8 @@
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>PROJECTS</h5>
-				</div>
-				<div class="col-lg-5">
-					<p><img class="img-responsive" src="assets/img/port01.jpg" alt=""></p>
-				</div>
-				<div class="col-lg-4">
-					<p>COMPUTER VISION COURSE PROJECT</p>
-				<p><a href="https://ihome.ust.hk/~jzengab/cvproject1.htm"><i class="icon-tag"></i></a>Project 1. Intelligent Scissor</p>
-				<p><a href="https://ihome.ust.hk/~jzengab/cvproject2.htm"><i class="icon-tag"></i></a>Project 2. Single View Modeling</p>
-                <p><a href="https://ihome.ust.hk/~jzengab/cvproject3.htm"><i class="icon-tag"></i></a>Project 3. Tensor Voting</p>
-                <p><a href="https://ihome.ust.hk/~jzengab/cvproject4.htm"><i class="icon-tag"></i></a>Project 4. Multiple-view Modeling</p>
-				</div>
-	
-				<div class="col-lg-6 col-lg-offset-3">
+				</div>	
+				<div class="col-lg-6 col-lg-offset-1">
 					<p><img class="img-responsive" src="assets/img/port02.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
@@ -415,13 +404,9 @@
 				<div class="col-lg-6">
 					<p>
 					<t>Adress</t><br/>
-						Department of Electronic and Computer Engineering<br>The 
-					Hong Kong University of Science and Techology<br>Clear Water 
-					Bay<br>Kowloon, HONG KONG</p>
-					<p style="height: 58px">Lab:<br/>
-						Room 3126</p>
+						Sensetime<br>2F, Core Building 2, No.1 , Science Park West Avenue, Hong Kong Science Park<br>Shatin, New Territories<br>HONG KONG</p>
 					<p><t>Email</t><br/>
-						jzengab@connect.ust.hk<br/>
+						jzeng2010@gmail.com<br/>
 					</p>
 					<p><t>Phone</t><br/>
 						+852 5483 7412<br/>
