update for publications
update for publications

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					Cheung.</p>
 				</div>
 				<div class="col-lg-3">
-					<p><a href="https://ihome.ust.hk/~jzengab/assets/CV_Zeng Jin.pdf"><i class="icon-file"></i></a>Links in this site to be updated</p>
+					<p><a href="assets/CV_Zeng Jin.pdf"><i class="icon-file"></i></a>Links in this site to be updated</p>
 				</div>
 				
 			</div><!--/.row -->
@@ -176,6 +176,18 @@
 					<h5>SELECTED PUBLICATIONS</h5>
 				</div>
 				<div class="col-lg-8">
+					<p>Jin Zeng, Yunmu Huang, Yanfeng Tong, Qiong Yan, Wenxiu Sun, "Surface Normal Estimation with Hierarchical RGB-D Fusion", 
+						IEEE Conf. on Computer Vision and Pattern Recognition, 2019. 
+					</p>
+				</div>
+
+				<div class="col-lg-8 col-lg-offset-3">
+					<p>Jin Zeng, Jiahao Pang, Wenxiu Sun, Gene Cheung, "Deep Graph Laplacian Regularization", 
+						IEEE Conf. on Computer Vision and Pattern Recognition Workshop, 2019. 
+					</p>
+				</div>
+
+				<div class="col-lg-8 col-lg-offset-3">
 					<p>Jin Zeng, Gene Cheung, Antonio Orgeta, "Bipartition Approximation for Graph Wavelet Signal Decomposition", 
 					IEEE Trans. Signal Processing, 2017, 65(20): 5466-5480. 
 					</p>
@@ -349,7 +361,7 @@
 					<p><more>Decompose the non-bipartite input graph into series of bipartite subgraphs so that the critically sampled wavelet filterbanks can be applied iteratively.<br/>
 						</more> 
 					</p>
-					<p><a href="https://ihome.ust.hk/~jzengab/ICASSP16_Jin.pdf"><i class="icon-tag"></i></a>ICASSP'16 poster</p>
+					<p><a href="ICASSP16_Jin.pdf"><i class="icon-tag"></i></a>ICASSP'16 poster</p>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
@@ -360,7 +372,7 @@
 					<p><more>A unified quality assessment metric for subpixel-based rendered images, syncretizing local subpixel and global pixel features.<br/>
 						</more> 
 					</p>
-					<p><a href="https://ihome.ust.hk/~jzengab/subpixel.html"><i class="icon-tag"></i></a>Details about the paper</p>
+					<p><a href="subpixel.html"><i class="icon-tag"></i></a>Details about the paper</p>
 				</div>
 				
 				<div class="col-lg-6 col-lg-offset-3">
