--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					Cheung.</p>
 				</div>
 				<div class="col-lg-3">
-					<p><a href="assets/CV_Zeng Jin.pdf"><i class="icon-file"></i></a>Links in this site to be updated</p>
+					<p><a href="assets/CV_Zeng Jin.pdf"><i class="icon-file"></i></a>link to the resume</p>
 				</div>
 				
 			</div><!--/.row -->
