--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 					<p> <t>Jin Zeng</t>, Gene Cheung, Michael Ng, Jiahao Pang, Cheng Yang "3D point cloud denoising using graph Laplacian regularization of a low dimensional manifold model", 
 					submitted to IEEE Trans. Image Processing 
 					<a href="https://arxiv.org/pdf/1803.07252.pdf">[arxiv]</a>
+					<a href="https://github.com/jzengust/ldmm_graph_laplacian_pointcloud_denoise">[link]</a>
 					</p>
 				</div>
 				
