--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 				
 				<div class="col-lg-8 col-lg-offset-3">
 					<p> <t>Jin Zeng</t>, Gene Cheung, Michael Ng, Jiahao Pang, Cheng Yang "3D point cloud denoising using graph Laplacian regularization of a low dimensional manifold model", 
-					submitted to IEEE Trans. Image Processing 
+					to appear on IEEE Trans. Image Processing 
 					<a href="https://arxiv.org/pdf/1803.07252.pdf">[arxiv]</a>
-					<a href="https://github.com/jzengust/ldmm_graph_laplacian_pointcloud_denoise">[link]</a>
+					<a href="https://github.com/jzengust/ldmm_graph_laplacian_pointcloud_denoise">[code]</a>
 					</p>
 				</div>
 				
@@ -250,7 +250,7 @@
 						IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), 2019. 
 						<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Zeng_Deep_Surface_Normal_Estimation_With_Hierarchical_RGB-D_Fusion_CVPR_2019_paper.pdf">[paper]</a>
 						<a href="http://openaccess.thecvf.com/content_CVPR_2019/supplemental/Zeng_Deep_Surface_Normal_CVPR_2019_supplemental.pdf">[supp]</a>
-						<a href="https://huangyunmu.github.io/HFMNet_CVPR2019/">[website]</a>
+						<a href="https://huangyunmu.github.io/HFMNet_CVPR2019/">[code]</a>
 
 					</p>
 				</div>
@@ -267,7 +267,7 @@
 					<p>Jiahao Pang, Wenxiu Sun, Chengxi Yang, Jimmy S. Ren, Ruichao Xiao, <t>Jin Zeng</t>, Liang Lin "Zoom and learn: Generalizing deep stereo matching to novel domains", 
 						IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), 2018. 
 						<a href="http://openaccess.thecvf.com/content_cvpr_2018/papers/Pang_Zoom_and_Learn_CVPR_2018_paper.pdf">[paper]</a>
-						<a href="https://github.com/Artifineuro/zole">[github]</a>
+						<a href="https://github.com/Artifineuro/zole">[code]</a>
 					</p>
 				</div>				
 	
