--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					</p>
 
 					<p>					
-					Please contact me if you are interested in internship opportunities in SenseTime Research (base Hong Kong).
+					Please contact me if you are interested in internship opportunities in SenseTime Research (base Hong Kong/Shenzhen).
 					Topics include 3D computer vision, low-level image restoration, etc.
 
 										
