--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 					<t>Adress</t><br/>
 						SenseTime, Hong Kong Science Park, Shatin, Hong Kong</p>
 					<p><t>Email</t><br/>
-						zengjin@sensetime.com<br/>
+						zengjin@tetras.ai<br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
