--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="row centered">
 				<div class="col-lg-12">
 					<h1>Jin ZENG</h1>
-					<h3>Tongji University, Shanghai</h3>
+					<!-- <h3>Tongji University, Shanghai</h3> -->
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
