--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,4 +11,6 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %} -->
 
-## Book Chapter
+Graph Signal Processing, Graduate Course, Fall Semester 2022
+<br /> Introduction to Artificial Intelligence, Undergraduate Course, Spring Semester 2023
+<br /> Graph Signal Processing, Graduate Course, Fall Semester 2023
