--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -11,6 +11,26 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %} -->
 
-Graph Signal Processing, Graduate Course, Fall Semester 2022
-<br /> Introduction to Artificial Intelligence, Undergraduate Course, Spring Semester 2023
-<br /> Graph Signal Processing, Graduate Course, Fall Semester 2023
+Session chair
+======
+* IEEE International Conference on Visual Communications and Image Processing (VCIP) 2022
+
+Reviewer for the following journals/conferences
+======
+* IEEE Transactions on Image Processing (TIP)
+* IEEE Transactions on Signal Processing (TSP)
+* IEEE Transactions on Multimedia (TMM)
+* IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)
+* IEEE Transactions on Signal and Information Processing over Networks (TSIPN)
+* Pattern Recognition
+* IEEE Conference on Computer Vision and Pattern Recognition (CVPR)
+* IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)
+* IEEE International Conference on Image Processing (ICIP)
+* International Workshop on Multimedia Signal Processing (MMSP)
+* IEEE International Conference on Visual Communications and Image Processing (VCIP)
+* IEEE International Workshop on Signal Processing Systems (SiPS)
+* APSIPA Annual Summit and Conference (ASC)
+
+Student volunteer
+======
+* SIGGRAPH ASIA 2014
