--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -13,4 +13,6 @@ author_profile: true
 
 Graph Signal Processing, Graduate Course, Fall Semester 2022
 <br /> Introduction to Artificial Intelligence, Undergraduate Course, Spring Semester 2023
+<br /> Mobile data analysis in competition and education, Undergraduate Course, Spring Semester 2023
 <br /> Graph Signal Processing, Graduate Course, Fall Semester 2023
+<br /> Introduction to Artificial Intelligence, Undergraduate Course, Spring Semester 2024
